# 3DGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Camera.hpp  Game.cpp  Player.hpp  World.hpp  main.cpp
src/Assets/Shaders/: DefaultFragment.glsl
src/Core/: Application.cpp  Application.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Window.hpp
src/Events/: Event.hpp  KeyboardEvent.hpp  MouseEvent.hpp
src/Renderer/: Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  ShaderManager.hpp
src/Scene/: Camera.hpp  Components.hpp  Entity.cpp  Entity.hpp  Plane.cpp  Player.hpp  Scene.cpp  Scene.hpp  SceneLoader.hpp  SceneManager.hpp
src/Shaders/: PlaneFragment.glsl  PlaneVertex.glsl  PlayerFragment.glsl  PlayerVertex.glsl
src/glad/: glad.c  glad.h
